INT-2562: Addressing PR's comments