@@ -82,7 +82,7 @@ public class JpaMessageHandlerParserTests {
 		assertNotNull(jpaParameters);
 		assertTrue(jpaParameters.size() == 3);
 
-		assertEquals(new Integer(10), TestUtils.getPropertyValue(jpaExecutor, "flushSize", Integer.class));
+		assertEquals(Integer.valueOf(10), TestUtils.getPropertyValue(jpaExecutor, "flushSize", Integer.class));
 		assertTrue(TestUtils.getPropertyValue(jpaExecutor, "cleanOnFlush", Boolean.class));
 	}
 
